--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Inter&family=Montserrat&family=Poppins:wght@100;200;300;400;500&family=Press+Start+2P&family=Raleway&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
